--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera.any"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera.any" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Fruturity"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.screen.result.ResultActivity"
+            android:exported="false"
+            android:label="@string/title_activity_result"
+            android:theme="@style/Theme.Fruturity" />
+        <activity
+            android:name=".ui.screen.camera.ImageClasificationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_image_clasification"
+            android:theme="@style/Theme.Fruturity" />
+        <activity
+            android:name=".ui.screen.camera.CameraRealTimeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.screen.camera.CameraxActivity"
+            android:exported="false"
+            android:label="@string/title_activity_camerax"
+            android:theme="@style/Theme.Fruturity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,16 +49,13 @@
         </activity>
 
         <provider
-            android:authorities="${applicationId}.provider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
-
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/path_provider"
-                />
-
+                android:resource="@xml/path_provider" />
         </provider>
     </application>
 
